todo list update: maybe look into data-async-context

--- a/J/project0/index.html
+++ b/J/project0/index.html
@@ -8,5 +8,7 @@
             <input type="text" name="q">
             <input type="submit" value="Google Search">
         </form>
+        <a href="advancedSearch.html">Advanced Search</a>
+        <a href="imageSearch.html">Image Search</a>
     </body>
 </html>
